# OpenGLEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  builds_info.json  cpp.hint  make_build.py
.github/workflows/: cmake.yml
gamedata/: config.json  copy.bash
gamedata/configs/: user_config.json
gamedata/scripts/: _global.lua  camera.lua  manager.lua  resource_manager.lua  shader_processor.lua
gamedata/shaders/: standart_fragment.glsl  standart_vertex.glsl
gamedata/shaders/basic/: basic.glsl
gamedata/shaders/template/: basic_vars.glsl
include/LuaBridge/detail/: LuaRef.h
include/SDL/: SDL_events.h
src/: main.cpp  main.h
src/base_types/: base_types.h  object.h
src/core/: core.cpp  core.h  core_module.h
src/engine/: camera.cpp  camera.h  config_manager.cpp  config_manager.h  game_object.h  input.cpp  input.h  manager.cpp  manager.h  resource_manager.cpp  resource_manager.h  updatable_object.cpp  updatable_object.h
src/gameplay/: actor.cpp  actor.h
src/math/: transform.cpp  transform.h
src/memory/: memory.cpp  memory.h
src/render/: mesh.cpp  mesh.h  render.cpp  render.h  shader.cpp  shader.h  shader_processor.cpp  shader_processor.h  world_matrix.cpp  world_matrix.h
src/scripting/: lua_manager.cpp  lua_manager.h  lua_registration.cpp  lua_script_data.h  scriptable_module.cpp  scriptable_module.h  scriptable_object.cpp  scriptable_object.h
src/serialization/: serialization.cpp  serialization.h
src/utils/: file_io.cpp  file_io.h  utils.cpp  utils.h
